# ttacc

./: .gitignore  .talismanrc  README.md  pyproject.toml  ttacc
docs/: CNAME  _config.yml  index.md
tools/: hello.py
ttacc/: ttacc.py
ttacc/commands/: aws.py  region-shift.py
ttacc/lib/: utils.py
ttacc/lib/aws/: constants.py  region.py
ttacc/lib/provider/: __init__.py  model.py
ttacc/tools/: aws.py
