[tool.poetry]
name = "ttacc"
version = "0.1.0"
description = "Terminal Tools Against Climate Change"
authors = ["Marco Valtas"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
