[tool.poetry]
name = "ttacc"
version = "0.1.0"
description = "Terminal Tools Against Climate Change"
authors = ["Marco Valtas"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.scripts]
ttacc = "ttacc.ttacc:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
